Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,5 +36,5 @@ steps:
   inputs:
     buildType: 'current'
     downloadType: 'single'
-    artifactName: 'tp'
+    artifactName: 'drop'
     downloadPath: '$(System.ArtifactsDirectory)'
